# reorder-python-imports

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  LICENSE  Makefile  README.md  azure-pipelines.yml  hooks.yaml  pylintrc  pyproject.toml  reorder_python_imports.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
reorder_python_imports/: main.py
test_data/inputs/: code_right_after_imports.py  comment_in_imports.py  enforce_froms.py  license_comment.py  needs_reordering.py  no_eol.py  noreorder_all.py  noreorder_inline.py  noreorder_not_at_beginning.py
test_data/outputs/: comment_in_imports.py  enforce_froms.py  needs_reordering.py  noreorder_inline.py  noreorder_not_at_beginning.py
testing/: generate-collections-info  generate-deprecated  generate-future-info  generate-mock-info  generate-python-future-info  generate-six-info  generate-tokenize  generate-typing-pep585-rewrites  generate-typing-rewrite-info
tests/: conftest.py  main_test.py  reorder_python_imports_test.py  test_black_interoperability.py
