[metadata]
name = reorder_python_imports
version = 3.13.0
description = Tool for reordering python imports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/reorder-python-imports
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = reorder_python_imports
install_requires =
    classify-imports>=4.1
python_requires = >=3.8

[options.entry_points]
console_scripts =
    reorder-python-imports = reorder_python_imports:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
